--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AWeather</title>
-    <link rel="icon" href="images/android-chrome-192x192.png" type="image/png"> 
+    <link rel="icon" href="./android-chrome-192x192.png" type="image/png"> 
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
